fixed content being cut off | doenload CV

--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,10 @@
   position: relative;
 }
 
-.expContainer {
-  width: 700px;
+@media screen and (min-width: 500px) {
+  .expContainer {
+    width: 768px;
+  }
 }
 
 .marginLeft30 {
